Fix carousel spacing

--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -1,8 +1,17 @@
 .scroller{
-  margin-top: 4.4vh;
+  margin-top: 1vh;
   .image{
     img{
       width: 55%;
+    }
+  }
+
+  @media only screen and (min-device-height: 1000px) {
+    margin-top: 8.4vh;
+    .image{
+      img{
+        width: 60%;
+      }
     }
   }
 
